<resources xmlns:xliff="http://schemas.android.com/apk/res-auto">
    <string name="app_name">Sunshine</string>
    <string name="hello_world">Hello world!</string>

    <string name="action_settings">Settings</string>
    <string name="action_refresh">Refresh</string>
    <string name="action_map">Mapa</string>
    <string name="action_share">Share</string>

    <string name="title_activity_detail">DetailActivity</string>

    <string name="settings_location_key">location</string>
    <string name="settings_location_label">Location</string>
    <string name="settings_location_default">74912260</string>

    <string name="settings_temperature_label">Temperatures</string>
    <string name="settings_temperature_key">temperatures</string>
    <string name="settings_temperature_summary">Types of Temperatures</string>
    <string name="settings_temperatures_temp_metric">metric</string>
    <string name="settings_temperatures_temp_imperial">imperial</string>
    <string name="settings_temperatures_temp_default">@string/settings_temperatures_temp_metric</string>

    <string-array name="settings_temperatures_temp_labels">
        <item >Metric</item>
        <item >Imperial</item>
    </string-array>
    <string-array name="settings_temperatures_temp_values">
        <item >@string/settings_temperatures_temp_metric</item>
        <item >@string/settings_temperatures_temp_imperial</item>
    </string-array>

    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Hoje</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Amanha</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="month">%1$s</xliff:g>, <xliff:g id="day">%2$s</xliff:g></string>

    <string name="format_temperature"><xliff:g id="temp">%1.0f</xliff:g>\u00B0</string>


    <!-- Windspeed formats -->
    <!-- Wind in mph [CHAR LIMIT=25] -->
    <string name="format_wind_mph">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> mph <xliff:g id="direction">%2$s</xliff:g></string>

        <!-- Wind in kph [CHAR LIMIT=25] -->
    <string name="format_wind_kmh">Wind: <xliff:g id="speed">%1$1.0f</xliff:g> km/h <xliff:g id="direction">%2$s</xliff:g></string>

    <!-- Pressure format CHAR LIMIT=25] -->
    <string name="format_pressure">Pressure: <xliff:g id="pressure">%1.0f</xliff:g> hPa</string>

    <!-- Humidity format CHAR LIMIT=25]-->
    <string name="format_humidity">Humidity: <xliff:g id="humidity">%1.0f</xliff:g> %%</string>


</resources>
