<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <EditTextPreference
        android:key="@string/settings_location_key"
        android:title="@string/settings_location_label"
        android:defaultValue="@string/settings_location_default"
        android:inputType="text"
        android:singleLine="true" />


    <ListPreference
        android:title="@string/settings_temperature_label"
        android:key="@string/settings_temperature_key"
        android:summary="@string/settings_temperature_summary"
        android:dialogTitle="@string/settings_temperature_label"
        android:entries="@array/settings_temperatures_temp_labels"
        android:entryValues="@array/settings_temperatures_temp_values"
        android:defaultValue="@string/settings_temperatures_temp_default"
         />


</PreferenceScreen>
